--- a/quadruples.yaml
+++ b/quadruples.yaml
@@ -2,7 +2,7 @@
 - - goto
   - 
   - 
-  - 19
+  - 28
 - - "="
   - 
   - 150000
@@ -51,49 +51,108 @@
   - 
   - 
   - 4
-- - SEND_ATTR
-  - 0
-  - 
-  - 
-- - SEND_ATTR
-  - 1
-  - 
-  - 
 - - return
   - 
   - 
   - 50002
-- - SEND_ATTR
-  - 0
-  - 
-  - 
-- - SEND_ATTR
-  - 1
-  - 
-  - 
 - - return
   - 
   - 
   - 
-- - param
+- - "<"
+  - 50000
   - 150002
+  - 140001
+- - gotoF
+  - 140001
+  - 
+  - 19
+- - return
+  - 
+  - 
+  - 50000
+- - goto
+  - 
+  - 
+  - 27
+- - "-"
+  - 50000
+  - 150001
+  - 100002
+- - param
+  - 100002
   - - 1
     - 1
   - 50000
-- - SEND_ATTR
-  - 0
-  - 
-  - 
-- - SEND_ATTR
-  - 1
-  - 
-  - 
 - - gosub
-  - 1
+  - 15
+  - 
+  - 50001
+- - "-"
+  - 50000
+  - 150002
+  - 100003
+- - param
+  - 100003
+  - - 1
+    - 1
+  - 50000
+- - gosub
+  - 15
+  - 
+  - 50002
+- - "+"
+  - 50001
+  - 50002
+  - 100004
+- - return
+  - 
+  - 
+  - 100004
+- - return
+  - 
+  - 
+  - 
+- - say
+  - 170000
+  - 
+  - 
+- - hear
+  - number
   - 
   - 50000
 - - say
+  - 170001
+  - 
+  - 
+- - param
   - 50000
+  - - 1
+    - 1
+  - 50000
+- - gosub
+  - 1
+  - 
+  - 50001
+- - say
+  - 50001
+  - 
+  - 
+- - say
+  - 170002
+  - 
+  - 
+- - param
+  - 50000
+  - - 1
+    - 1
+  - 50000
+- - gosub
+  - 15
+  - 
+  - 50002
+- - say
+  - 50002
   - 
   - 
 - - terminate
