--- a/quadruples.yaml
+++ b/quadruples.yaml
@@ -2,7 +2,7 @@
 - - goto
   - 
   - 
-  - 28
+  - 29
 - - "="
   - 
   - 150000
@@ -51,6 +51,10 @@
   - 
   - 
   - 4
+- - say
+  - 170000
+  - 
+  - 
 - - return
   - 
   - 
@@ -66,7 +70,7 @@
 - - gotoF
   - 140001
   - 
-  - 19
+  - 20
 - - return
   - 
   - 
@@ -74,7 +78,7 @@
 - - goto
   - 
   - 
-  - 27
+  - 28
 - - "-"
   - 50000
   - 150001
@@ -85,7 +89,7 @@
     - 1
   - 50000
 - - gosub
-  - 15
+  - 16
   - 
   - 50001
 - - "-"
@@ -98,7 +102,7 @@
     - 1
   - 50000
 - - gosub
-  - 15
+  - 16
   - 
   - 50002
 - - "+"
@@ -114,17 +118,13 @@
   - 
   - 
 - - say
-  - 170000
+  - 170001
   - 
   - 
 - - hear
   - number
   - 
   - 50000
-- - say
-  - 170001
-  - 
-  - 
 - - param
   - 50000
   - - 1
@@ -134,8 +134,17 @@
   - 1
   - 
   - 50001
-- - say
+- - param
   - 50001
+  - - 1
+    - 1
+  - 50000
+- - gosub
+  - 1
+  - 
+  - 50002
+- - say
+  - 50002
   - 
   - 
 - - say
@@ -148,11 +157,15 @@
     - 1
   - 50000
 - - gosub
-  - 15
+  - 16
   - 
-  - 50002
+  - 50003
 - - say
-  - 50002
+  - 50003
+  - 
+  - 
+- - say
+  - 170003
   - 
   - 
 - - terminate
