ya se pueden declarar arreglos, falta mandarlos llamar y considerarlos en los cambios de contexto

--- a/quadruples.yaml
+++ b/quadruples.yaml
@@ -2,7 +2,7 @@
 - - goto
   - 
   - 
-  - 29
+  - 33
 - - "="
   - 
   - 150000
@@ -78,7 +78,7 @@
 - - goto
   - 
   - 
-  - 28
+  - 32
 - - "-"
   - 50000
   - 150001
@@ -88,6 +88,14 @@
   - - 1
     - 1
   - 50000
+- - SEND_ATTR
+  - 0
+  - 
+  - 0
+- - SEND_ATTR
+  - 54
+  - 
+  - 54
 - - gosub
   - 16
   - 
@@ -101,6 +109,14 @@
   - - 1
     - 1
   - 50000
+- - SEND_ATTR
+  - 0
+  - 
+  - 0
+- - SEND_ATTR
+  - 54
+  - 
+  - 54
 - - gosub
   - 16
   - 
