--- a/quadruples.yaml
+++ b/quadruples.yaml
@@ -2,347 +2,92 @@
 - - goto
   - 
   - 
-  - 46
-- - "="
-  - 
-  - 150000
-  - 50000
+  - 139
 - - "="
   - 
   - 150000
   - 50001
 - - "="
   - 
-  - 190000
-  - 90000
-- - "-"
   - 150001
-  - 150000
-  - 100000
-- - "<="
+  - 50002
+- - "="
+  - 
+  - 150001
+  - 50004
+- - "<"
+  - 50004
   - 50000
-  - 100000
   - 140000
 - - gotoF
   - 140000
   - 
-  - 45
-- - "="
-  - 
-  - 190000
-  - 90000
-- - "="
-  - 
-  - 150000
+  - 13
+- - "+"
   - 50001
-- - "-"
+  - 50002
+  - 100000
+- - "="
+  - 
+  - 100000
+  - 50003
+- - "="
+  - 
+  - 50002
+  - 50001
+- - "="
+  - 
+  - 50003
+  - 50002
+- - "+"
+  - 50004
   - 150001
-  - 50000
   - 100001
-- - "<="
-  - 50001
+- - "="
+  - 
   - 100001
-  - 140001
-- - gotoF
-  - 140001
-  - 
-  - 42
-- - verify
-  - 10
-  - 1
-  - 50001
-- - "+SpecialRight"
-  - 50001
-  - -1
-  - 100002
-- - "+SpecialRight"
-  - 100002
-  - 0
-  - 100003
-- - "+"
-  - 50001
-  - 150000
-  - 100004
-- - verify
-  - 10
-  - 1
-  - 100004
-- - "+SpecialRight"
-  - 100004
-  - -1
-  - 100005
-- - "+SpecialRight"
-  - 100005
-  - 0
-  - 100006
-- - ">"
-  - 100003.0
-  - 100006.0
-  - 140002
-- - gotoF
-  - 140002
-  - 
-  - 39
-- - verify
-  - 10
-  - 1
-  - 50001
-- - "+SpecialRight"
-  - 50001
-  - -1
-  - 100007
-- - "+SpecialRight"
-  - 100007
-  - 0
-  - 100008
-- - "="
-  - 
-  - 100008.0
-  - 50002
-- - verify
-  - 10
-  - 1
-  - 50001
-- - "+SpecialRight"
-  - 50001
-  - -1
-  - 100009
-- - "+SpecialRight"
-  - 100009
-  - 0
-  - 100010
-- - "+"
-  - 50001
-  - 150000
-  - 100011
-- - verify
-  - 10
-  - 1
-  - 100011
-- - "+SpecialRight"
-  - 100011
-  - -1
-  - 100012
-- - "+SpecialRight"
-  - 100012
-  - 0
-  - 100013
-- - "="
-  - 
-  - 100013.0
-  - 100010.0
-- - "+"
-  - 50001
-  - 150000
-  - 100014
-- - verify
-  - 10
-  - 1
-  - 100014
-- - "+SpecialRight"
-  - 100014
-  - -1
-  - 100015
-- - "+SpecialRight"
-  - 100015
-  - 0
-  - 100016
-- - "="
-  - 
-  - 50002
-  - 100016.0
-- - "="
-  - 
-  - 190001
-  - 90000
-- - "+"
-  - 50001
-  - 150000
-  - 100017
-- - "="
-  - 
-  - 100017
-  - 50001
-- - goto
-  - 
-  - 
-  - 9
-- - "+"
-  - 50000
-  - 150000
-  - 100018
-- - "="
-  - 
-  - 100018
-  - 50000
+  - 50004
 - - goto
   - 
   - 
   - 4
+- - say
+  - 170000
+  - 
+  - 
+- - return
+  - 
+  - 
+  - 50002
 - - return
   - 
   - 
   - 
-- - verify
-  - 10
-  - 1
-  - 150000
-- - "+SpecialRight"
-  - 150000
-  - -1
-  - 100019
-- - "+SpecialRight"
-  - 100019
-  - 0
-  - 100020
-- - "="
-  - 
+- - "<"
+  - 50000
   - 150002
-  - 100020.0
-- - verify
-  - 10
-  - 1
-  - 150003
-- - "+SpecialRight"
-  - 150003
-  - -1
-  - 100021
-- - "+SpecialRight"
-  - 100021
-  - 0
-  - 100022
-- - "="
+  - 140001
+- - gotoF
+  - 140001
   - 
-  - 150004
-  - 100022.0
-- - verify
-  - 10
-  - 1
-  - 150002
-- - "+SpecialRight"
-  - 150002
-  - -1
-  - 100023
-- - "+SpecialRight"
-  - 100023
-  - 0
-  - 100024
-- - "="
+  - 20
+- - return
   - 
-  - 150005
-  - 100024.0
-- - verify
-  - 10
-  - 1
-  - 150006
-- - "+SpecialRight"
-  - 150006
-  - -1
-  - 100025
-- - "+SpecialRight"
-  - 100025
-  - 0
-  - 100026
-- - "="
   - 
-  - 150007
-  - 100026.0
-- - verify
-  - 10
-  - 1
-  - 150008
-- - "+SpecialRight"
-  - 150008
-  - -1
-  - 100027
-- - "+SpecialRight"
-  - 100027
-  - 0
-  - 100028
-- - "="
+  - 50000
+- - goto
   - 
-  - 150003
-  - 100028.0
-- - verify
-  - 10
-  - 1
-  - 150009
-- - "+SpecialRight"
-  - 150009
-  - -1
-  - 100029
-- - "+SpecialRight"
-  - 100029
-  - 0
-  - 100030
-- - "="
   - 
-  - 150010
-  - 100030.0
-- - verify
-  - 10
-  - 1
-  - 150004
-- - "+SpecialRight"
-  - 150004
-  - -1
-  - 100031
-- - "+SpecialRight"
-  - 100031
-  - 0
-  - 100032
-- - "="
-  - 
-  - 150011
-  - 100032.0
-- - verify
-  - 10
-  - 1
-  - 150012
-- - "+SpecialRight"
-  - 150012
-  - -1
-  - 100033
-- - "+SpecialRight"
-  - 100033
-  - 0
-  - 100034
-- - "="
-  - 
-  - 150000
-  - 100034.0
-- - verify
-  - 10
-  - 1
-  - 150013
-- - "+SpecialRight"
-  - 150013
-  - -1
-  - 100035
-- - "+SpecialRight"
-  - 100035
-  - 0
-  - 100036
-- - "="
-  - 
-  - 150006
-  - 100036.0
-- - verify
-  - 10
-  - 1
+  - 138
+- - "-"
+  - 50000
   - 150001
-- - "+SpecialRight"
-  - 150001
-  - -1
-  - 100037
-- - "+SpecialRight"
-  - 100037
-  - 0
-  - 100038
-- - "="
-  - 
-  - 150014
-  - 100038.0
+  - 100002
+- - param
+  - 100002
+  - - 1
+    - 1
+  - 50000
 - - SEND_ATTR
   - 0
   - 
@@ -383,168 +128,484 @@
   - 9
   - 
   - 9
+- - SEND_ATTR
+  - 10
+  - 
+  - 10
+- - SEND_ATTR
+  - 11
+  - 
+  - 11
+- - SEND_ATTR
+  - 12
+  - 
+  - 12
+- - SEND_ATTR
+  - 13
+  - 
+  - 13
+- - SEND_ATTR
+  - 14
+  - 
+  - 14
+- - SEND_ATTR
+  - 15
+  - 
+  - 15
+- - SEND_ATTR
+  - 16
+  - 
+  - 16
+- - SEND_ATTR
+  - 17
+  - 
+  - 17
+- - SEND_ATTR
+  - 18
+  - 
+  - 18
+- - SEND_ATTR
+  - 19
+  - 
+  - 19
+- - SEND_ATTR
+  - 20
+  - 
+  - 20
+- - SEND_ATTR
+  - 21
+  - 
+  - 21
+- - SEND_ATTR
+  - 22
+  - 
+  - 22
+- - SEND_ATTR
+  - 23
+  - 
+  - 23
+- - SEND_ATTR
+  - 24
+  - 
+  - 24
+- - SEND_ATTR
+  - 25
+  - 
+  - 25
+- - SEND_ATTR
+  - 26
+  - 
+  - 26
+- - SEND_ATTR
+  - 27
+  - 
+  - 27
+- - SEND_ATTR
+  - 28
+  - 
+  - 28
+- - SEND_ATTR
+  - 29
+  - 
+  - 29
+- - SEND_ATTR
+  - 30
+  - 
+  - 30
+- - SEND_ATTR
+  - 31
+  - 
+  - 31
+- - SEND_ATTR
+  - 32
+  - 
+  - 32
+- - SEND_ATTR
+  - 33
+  - 
+  - 33
+- - SEND_ATTR
+  - 34
+  - 
+  - 34
+- - SEND_ATTR
+  - 35
+  - 
+  - 35
+- - SEND_ATTR
+  - 36
+  - 
+  - 36
+- - SEND_ATTR
+  - 37
+  - 
+  - 37
+- - SEND_ATTR
+  - 38
+  - 
+  - 38
+- - SEND_ATTR
+  - 39
+  - 
+  - 39
+- - SEND_ATTR
+  - 40
+  - 
+  - 40
+- - SEND_ATTR
+  - 41
+  - 
+  - 41
+- - SEND_ATTR
+  - 42
+  - 
+  - 42
+- - SEND_ATTR
+  - 43
+  - 
+  - 43
+- - SEND_ATTR
+  - 44
+  - 
+  - 44
+- - SEND_ATTR
+  - 45
+  - 
+  - 45
+- - SEND_ATTR
+  - 46
+  - 
+  - 46
+- - SEND_ATTR
+  - 47
+  - 
+  - 47
+- - SEND_ATTR
+  - 48
+  - 
+  - 48
+- - SEND_ATTR
+  - 49
+  - 
+  - 49
+- - SEND_ATTR
+  - 50
+  - 
+  - 50
+- - SEND_ATTR
+  - 51
+  - 
+  - 51
+- - SEND_ATTR
+  - 52
+  - 
+  - 52
+- - SEND_ATTR
+  - 53
+  - 
+  - 53
+- - SEND_ATTR
+  - 54
+  - 
+  - 54
+- - gosub
+  - 16
+  - 
+  - 50001
+- - "-"
+  - 50000
+  - 150002
+  - 100003
+- - param
+  - 100003
+  - - 1
+    - 1
+  - 50000
+- - SEND_ATTR
+  - 0
+  - 
+  - 0
+- - SEND_ATTR
+  - 1
+  - 
+  - 1
+- - SEND_ATTR
+  - 2
+  - 
+  - 2
+- - SEND_ATTR
+  - 3
+  - 
+  - 3
+- - SEND_ATTR
+  - 4
+  - 
+  - 4
+- - SEND_ATTR
+  - 5
+  - 
+  - 5
+- - SEND_ATTR
+  - 6
+  - 
+  - 6
+- - SEND_ATTR
+  - 7
+  - 
+  - 7
+- - SEND_ATTR
+  - 8
+  - 
+  - 8
+- - SEND_ATTR
+  - 9
+  - 
+  - 9
+- - SEND_ATTR
+  - 10
+  - 
+  - 10
+- - SEND_ATTR
+  - 11
+  - 
+  - 11
+- - SEND_ATTR
+  - 12
+  - 
+  - 12
+- - SEND_ATTR
+  - 13
+  - 
+  - 13
+- - SEND_ATTR
+  - 14
+  - 
+  - 14
+- - SEND_ATTR
+  - 15
+  - 
+  - 15
+- - SEND_ATTR
+  - 16
+  - 
+  - 16
+- - SEND_ATTR
+  - 17
+  - 
+  - 17
+- - SEND_ATTR
+  - 18
+  - 
+  - 18
+- - SEND_ATTR
+  - 19
+  - 
+  - 19
+- - SEND_ATTR
+  - 20
+  - 
+  - 20
+- - SEND_ATTR
+  - 21
+  - 
+  - 21
+- - SEND_ATTR
+  - 22
+  - 
+  - 22
+- - SEND_ATTR
+  - 23
+  - 
+  - 23
+- - SEND_ATTR
+  - 24
+  - 
+  - 24
+- - SEND_ATTR
+  - 25
+  - 
+  - 25
+- - SEND_ATTR
+  - 26
+  - 
+  - 26
+- - SEND_ATTR
+  - 27
+  - 
+  - 27
+- - SEND_ATTR
+  - 28
+  - 
+  - 28
+- - SEND_ATTR
+  - 29
+  - 
+  - 29
+- - SEND_ATTR
+  - 30
+  - 
+  - 30
+- - SEND_ATTR
+  - 31
+  - 
+  - 31
+- - SEND_ATTR
+  - 32
+  - 
+  - 32
+- - SEND_ATTR
+  - 33
+  - 
+  - 33
+- - SEND_ATTR
+  - 34
+  - 
+  - 34
+- - SEND_ATTR
+  - 35
+  - 
+  - 35
+- - SEND_ATTR
+  - 36
+  - 
+  - 36
+- - SEND_ATTR
+  - 37
+  - 
+  - 37
+- - SEND_ATTR
+  - 38
+  - 
+  - 38
+- - SEND_ATTR
+  - 39
+  - 
+  - 39
+- - SEND_ATTR
+  - 40
+  - 
+  - 40
+- - SEND_ATTR
+  - 41
+  - 
+  - 41
+- - SEND_ATTR
+  - 42
+  - 
+  - 42
+- - SEND_ATTR
+  - 43
+  - 
+  - 43
+- - SEND_ATTR
+  - 44
+  - 
+  - 44
+- - SEND_ATTR
+  - 45
+  - 
+  - 45
+- - SEND_ATTR
+  - 46
+  - 
+  - 46
+- - SEND_ATTR
+  - 47
+  - 
+  - 47
+- - SEND_ATTR
+  - 48
+  - 
+  - 48
+- - SEND_ATTR
+  - 49
+  - 
+  - 49
+- - SEND_ATTR
+  - 50
+  - 
+  - 50
+- - SEND_ATTR
+  - 51
+  - 
+  - 51
+- - SEND_ATTR
+  - 52
+  - 
+  - 52
+- - SEND_ATTR
+  - 53
+  - 
+  - 53
+- - SEND_ATTR
+  - 54
+  - 
+  - 54
+- - gosub
+  - 16
+  - 
+  - 50002
+- - "+"
+  - 50001
+  - 50002
+  - 100004
+- - return
+  - 
+  - 
+  - 100004
+- - return
+  - 
+  - 
+  - 
+- - say
+  - 170001
+  - 
+  - 
+- - hear
+  - number
+  - 
+  - 50000
+- - param
+  - 50000
+  - - 1
+    - 1
+  - 50000
 - - gosub
   - 1
   - 
-  - 
-- - verify
-  - 10
+  - 50001
+- - param
+  - 50001
+  - - 1
+    - 1
+  - 50000
+- - gosub
   - 1
-  - 150000
-- - "+SpecialRight"
-  - 150000
-  - -1
-  - 100039
-- - "+SpecialRight"
-  - 100039
-  - 0
-  - 100040
+  - 
+  - 50002
 - - say
-  - 100040.0
+  - 50002
   - 
   - 
-- - verify
-  - 10
-  - 1
-  - 150003
-- - "+SpecialRight"
-  - 150003
-  - -1
-  - 100041
-- - "+SpecialRight"
-  - 100041
-  - 0
-  - 100042
 - - say
-  - 100042.0
+  - 170002
   - 
   - 
-- - verify
-  - 10
-  - 1
-  - 150002
-- - "+SpecialRight"
-  - 150002
-  - -1
-  - 100043
-- - "+SpecialRight"
-  - 100043
-  - 0
-  - 100044
+- - param
+  - 50000
+  - - 1
+    - 1
+  - 50000
+- - gosub
+  - 16
+  - 
+  - 50003
 - - say
-  - 100044.0
+  - 50003
   - 
   - 
-- - verify
-  - 10
-  - 1
-  - 150006
-- - "+SpecialRight"
-  - 150006
-  - -1
-  - 100045
-- - "+SpecialRight"
-  - 100045
-  - 0
-  - 100046
 - - say
-  - 100046.0
-  - 
-  - 
-- - verify
-  - 10
-  - 1
-  - 150008
-- - "+SpecialRight"
-  - 150008
-  - -1
-  - 100047
-- - "+SpecialRight"
-  - 100047
-  - 0
-  - 100048
-- - say
-  - 100048.0
-  - 
-  - 
-- - verify
-  - 10
-  - 1
-  - 150009
-- - "+SpecialRight"
-  - 150009
-  - -1
-  - 100049
-- - "+SpecialRight"
-  - 100049
-  - 0
-  - 100050
-- - say
-  - 100050.0
-  - 
-  - 
-- - verify
-  - 10
-  - 1
-  - 150004
-- - "+SpecialRight"
-  - 150004
-  - -1
-  - 100051
-- - "+SpecialRight"
-  - 100051
-  - 0
-  - 100052
-- - say
-  - 100052.0
-  - 
-  - 
-- - verify
-  - 10
-  - 1
-  - 150012
-- - "+SpecialRight"
-  - 150012
-  - -1
-  - 100053
-- - "+SpecialRight"
-  - 100053
-  - 0
-  - 100054
-- - say
-  - 100054.0
-  - 
-  - 
-- - verify
-  - 10
-  - 1
-  - 150013
-- - "+SpecialRight"
-  - 150013
-  - -1
-  - 100055
-- - "+SpecialRight"
-  - 100055
-  - 0
-  - 100056
-- - say
-  - 100056.0
-  - 
-  - 
-- - verify
-  - 10
-  - 1
-  - 150001
-- - "+SpecialRight"
-  - 150001
-  - -1
-  - 100057
-- - "+SpecialRight"
-  - 100057
-  - 0
-  - 100058
-- - say
-  - 100058.0
+  - 170003
   - 
   - 
 - - terminate
