ya esta el ejemplo de multiplicacion de matrices

--- a/quadruples.yaml
+++ b/quadruples.yaml
@@ -2,88 +2,363 @@
 - - goto
   - 
   - 
-  - 138
+  - 79
+- - "="
+  - 
+  - 150000
+  - 50000
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "-"
+  - 150001
+  - 150000
+  - 100000
+- - "<="
+  - 50000
+  - 100000
+  - 140000
+- - gotoF
+  - 140000
+  - 
+  - 40
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "-"
+  - 150001
+  - 50000
+  - 100001
+- - "<="
+  - 50001
+  - 100001
+  - 140001
+- - gotoF
+  - 140001
+  - 
+  - 38
+- - verify
+  - 10
+  - 1
+  - 50001
+- - "+SpecialRight"
+  - 50001
+  - -1
+  - 100002
+- - "+SpecialRight"
+  - 100002
+  - 0
+  - 100003
+- - "+"
+  - 50001
+  - 150000
+  - 100004
+- - verify
+  - 10
+  - 1
+  - 100004
+- - "+SpecialRight"
+  - 100004
+  - -1
+  - 100005
+- - "+SpecialRight"
+  - 100005
+  - 0
+  - 100006
+- - ">"
+  - 100003.0
+  - 100006.0
+  - 140002
+- - gotoF
+  - 140002
+  - 
+  - 36
+- - verify
+  - 10
+  - 1
+  - 50001
+- - "+SpecialRight"
+  - 50001
+  - -1
+  - 100007
+- - "+SpecialRight"
+  - 100007
+  - 0
+  - 100008
+- - "="
+  - 
+  - 100008.0
+  - 50002
+- - verify
+  - 10
+  - 1
+  - 50001
+- - "+SpecialRight"
+  - 50001
+  - -1
+  - 100009
+- - "+SpecialRight"
+  - 100009
+  - 0
+  - 100010
+- - "+"
+  - 50001
+  - 150000
+  - 100011
+- - verify
+  - 10
+  - 1
+  - 100011
+- - "+SpecialRight"
+  - 100011
+  - -1
+  - 100012
+- - "+SpecialRight"
+  - 100012
+  - 0
+  - 100013
+- - "="
+  - 
+  - 100013.0
+  - 100010.0
+- - "+"
+  - 50001
+  - 150000
+  - 100014
+- - verify
+  - 10
+  - 1
+  - 100014
+- - "+SpecialRight"
+  - 100014
+  - -1
+  - 100015
+- - "+SpecialRight"
+  - 100015
+  - 0
+  - 100016
+- - "="
+  - 
+  - 50002
+  - 100016.0
+- - "+="
+  - 
+  - 150000
+  - 50001
+- - goto
+  - 
+  - 
+  - 7
+- - "+="
+  - 
+  - 150000
+  - 50000
+- - goto
+  - 
+  - 
+  - 3
+- - return
+  - 
+  - 
+  - 
+- - "="
+  - 
+  - 150000
+  - 50000
 - - "="
   - 
   - 150000
   - 50001
 - - "="
   - 
-  - 150001
+  - 150000
   - 50002
-- - "="
-  - 
-  - 150001
-  - 50004
-- - "<"
-  - 50004
+- - "<="
   - 50000
-  - 140000
+  - 150002
+  - 140003
 - - gotoF
-  - 140000
+  - 140003
   - 
-  - 12
+  - 78
+- - "<="
+  - 50001
+  - 150002
+  - 140004
+- - gotoF
+  - 140004
+  - 
+  - 75
+- - "<="
+  - 50002
+  - 150002
+  - 140005
+- - gotoF
+  - 140005
+  - 
+  - 72
+- - verify
+  - 3
+  - 1
+  - 50000
+- - "*SpecialRight"
+  - 50000
+  - 3
+  - 100017
+- - verify
+  - 3
+  - 1
+  - 50002
+- - "+"
+  - 50002
+  - 100017
+  - 100018
+- - "+SpecialRight"
+  - 100018
+  - -4
+  - 100019
+- - "+SpecialRight"
+  - 100019
+  - 28
+  - 100020
+- - verify
+  - 3
+  - 1
+  - 50000
+- - "*SpecialRight"
+  - 50000
+  - 3
+  - 100021
+- - verify
+  - 3
+  - 1
+  - 50002
+- - "+"
+  - 50002
+  - 100021
+  - 100022
+- - "+SpecialRight"
+  - 100022
+  - -4
+  - 100023
+- - "+SpecialRight"
+  - 100023
+  - 19
+  - 100024
+- - verify
+  - 3
+  - 1
+  - 50002
+- - "*SpecialRight"
+  - 50002
+  - 3
+  - 100025
+- - verify
+  - 3
+  - 1
+  - 50001
 - - "+"
   - 50001
-  - 50002
-  - 100000
-- - "="
-  - 
-  - 100000
-  - 50003
-- - "="
-  - 
-  - 50002
-  - 50001
-- - "="
-  - 
-  - 50003
-  - 50002
+  - 100025
+  - 100026
+- - "+SpecialRight"
+  - 100026
+  - -4
+  - 100027
+- - "+SpecialRight"
+  - 100027
+  - 10
+  - 100028
+- - "*"
+  - 100024.0
+  - 100028.0
+  - 100029
 - - "+="
   - 
-  - 150001
-  - 50004
+  - 100029
+  - 100020.0
+- - "+="
+  - 
+  - 150000
+  - 50002
 - - goto
   - 
   - 
-  - 4
+  - 48
+- - "="
+  - 
+  - 150000
+  - 50002
+- - "+="
+  - 
+  - 150000
+  - 50001
+- - goto
+  - 
+  - 
+  - 46
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "+="
+  - 
+  - 150000
+  - 50000
+- - goto
+  - 
+  - 
+  - 44
+- - return
+  - 
+  - 
+  - 
+- - "="
+  - 
+  - 150000
+  - 50000
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50000
+  - 150001
+  - 140006
+- - gotoF
+  - 140006
+  - 
+  - 90
 - - say
   - 170000
   - 
   - 
-- - return
-  - 
-  - 
-  - 50002
-- - return
-  - 
-  - 
-  - 
-- - "<"
+- - verify
+  - 10
+  - 1
   - 50000
-  - 150002
-  - 140001
-- - gotoF
-  - 140001
+- - "+SpecialRight"
+  - 50000
+  - -1
+  - 100030
+- - "+SpecialRight"
+  - 100030
+  - 0
+  - 100031
+- - hear
+  - number
   - 
-  - 19
-- - return
+  - 100031.0
+- - "+="
   - 
-  - 
+  - 150000
   - 50000
 - - goto
   - 
   - 
-  - 137
-- - "-"
-  - 50000
-  - 150001
-  - 100001
-- - param
-  - 100001
-  - - 1
-    - 1
-  - 50000
+  - 81
 - - SEND_ATTR
   - 0
   - 
@@ -232,378 +507,622 @@
   - 36
   - 
   - 36
-- - SEND_ATTR
-  - 37
-  - 
-  - 37
-- - SEND_ATTR
-  - 38
-  - 
-  - 38
-- - SEND_ATTR
-  - 39
-  - 
-  - 39
-- - SEND_ATTR
-  - 40
-  - 
-  - 40
-- - SEND_ATTR
-  - 41
-  - 
-  - 41
-- - SEND_ATTR
-  - 42
-  - 
-  - 42
-- - SEND_ATTR
-  - 43
-  - 
-  - 43
-- - SEND_ATTR
-  - 44
-  - 
-  - 44
-- - SEND_ATTR
-  - 45
-  - 
-  - 45
-- - SEND_ATTR
-  - 46
-  - 
-  - 46
-- - SEND_ATTR
-  - 47
-  - 
-  - 47
-- - SEND_ATTR
-  - 48
-  - 
-  - 48
-- - SEND_ATTR
-  - 49
-  - 
-  - 49
-- - SEND_ATTR
-  - 50
-  - 
-  - 50
-- - SEND_ATTR
-  - 51
-  - 
-  - 51
-- - SEND_ATTR
-  - 52
-  - 
-  - 52
-- - SEND_ATTR
-  - 53
-  - 
-  - 53
-- - SEND_ATTR
-  - 54
-  - 
-  - 54
 - - gosub
-  - 15
-  - 
-  - 50001
-- - "-"
-  - 50000
-  - 150002
-  - 100002
-- - param
-  - 100002
-  - - 1
-    - 1
-  - 50000
-- - SEND_ATTR
-  - 0
-  - 
-  - 0
-- - SEND_ATTR
   - 1
-  - 
-  - 1
-- - SEND_ATTR
-  - 2
-  - 
-  - 2
-- - SEND_ATTR
-  - 3
-  - 
-  - 3
-- - SEND_ATTR
-  - 4
-  - 
-  - 4
-- - SEND_ATTR
-  - 5
-  - 
-  - 5
-- - SEND_ATTR
-  - 6
-  - 
-  - 6
-- - SEND_ATTR
-  - 7
-  - 
-  - 7
-- - SEND_ATTR
-  - 8
-  - 
-  - 8
-- - SEND_ATTR
-  - 9
-  - 
-  - 9
-- - SEND_ATTR
-  - 10
-  - 
-  - 10
-- - SEND_ATTR
-  - 11
-  - 
-  - 11
-- - SEND_ATTR
-  - 12
-  - 
-  - 12
-- - SEND_ATTR
-  - 13
-  - 
-  - 13
-- - SEND_ATTR
-  - 14
-  - 
-  - 14
-- - SEND_ATTR
-  - 15
-  - 
-  - 15
-- - SEND_ATTR
-  - 16
-  - 
-  - 16
-- - SEND_ATTR
-  - 17
-  - 
-  - 17
-- - SEND_ATTR
-  - 18
-  - 
-  - 18
-- - SEND_ATTR
-  - 19
-  - 
-  - 19
-- - SEND_ATTR
-  - 20
-  - 
-  - 20
-- - SEND_ATTR
-  - 21
-  - 
-  - 21
-- - SEND_ATTR
-  - 22
-  - 
-  - 22
-- - SEND_ATTR
-  - 23
-  - 
-  - 23
-- - SEND_ATTR
-  - 24
-  - 
-  - 24
-- - SEND_ATTR
-  - 25
-  - 
-  - 25
-- - SEND_ATTR
-  - 26
-  - 
-  - 26
-- - SEND_ATTR
-  - 27
-  - 
-  - 27
-- - SEND_ATTR
-  - 28
-  - 
-  - 28
-- - SEND_ATTR
-  - 29
-  - 
-  - 29
-- - SEND_ATTR
-  - 30
-  - 
-  - 30
-- - SEND_ATTR
-  - 31
-  - 
-  - 31
-- - SEND_ATTR
-  - 32
-  - 
-  - 32
-- - SEND_ATTR
-  - 33
-  - 
-  - 33
-- - SEND_ATTR
-  - 34
-  - 
-  - 34
-- - SEND_ATTR
-  - 35
-  - 
-  - 35
-- - SEND_ATTR
-  - 36
-  - 
-  - 36
-- - SEND_ATTR
-  - 37
-  - 
-  - 37
-- - SEND_ATTR
-  - 38
-  - 
-  - 38
-- - SEND_ATTR
-  - 39
-  - 
-  - 39
-- - SEND_ATTR
-  - 40
-  - 
-  - 40
-- - SEND_ATTR
-  - 41
-  - 
-  - 41
-- - SEND_ATTR
-  - 42
-  - 
-  - 42
-- - SEND_ATTR
-  - 43
-  - 
-  - 43
-- - SEND_ATTR
-  - 44
-  - 
-  - 44
-- - SEND_ATTR
-  - 45
-  - 
-  - 45
-- - SEND_ATTR
-  - 46
-  - 
-  - 46
-- - SEND_ATTR
-  - 47
-  - 
-  - 47
-- - SEND_ATTR
-  - 48
-  - 
-  - 48
-- - SEND_ATTR
-  - 49
-  - 
-  - 49
-- - SEND_ATTR
-  - 50
-  - 
-  - 50
-- - SEND_ATTR
-  - 51
-  - 
-  - 51
-- - SEND_ATTR
-  - 52
-  - 
-  - 52
-- - SEND_ATTR
-  - 53
-  - 
-  - 53
-- - SEND_ATTR
-  - 54
-  - 
-  - 54
-- - gosub
-  - 15
-  - 
-  - 50002
-- - "+"
-  - 50001
-  - 50002
-  - 100003
-- - return
-  - 
-  - 
-  - 100003
-- - return
-  - 
   - 
   - 
 - - say
   - 170001
   - 
   - 
-- - hear
-  - number
-  - 
-  - 50000
-- - param
-  - 50000
-  - - 1
-    - 1
-  - 50000
-- - gosub
+- - verify
+  - 10
   - 1
-  - 
-  - 50001
-- - param
-  - 50001
-  - - 1
-    - 1
-  - 50000
-- - gosub
-  - 1
-  - 
-  - 50002
+  - 150000
+- - "+SpecialRight"
+  - 150000
+  - -1
+  - 100032
+- - "+SpecialRight"
+  - 100032
+  - 0
+  - 100033
 - - say
-  - 50002
+  - 100033.0
   - 
   - 
+- - verify
+  - 10
+  - 1
+  - 150003
+- - "+SpecialRight"
+  - 150003
+  - -1
+  - 100034
+- - "+SpecialRight"
+  - 100034
+  - 0
+  - 100035
+- - say
+  - 100035.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150002
+- - "+SpecialRight"
+  - 150002
+  - -1
+  - 100036
+- - "+SpecialRight"
+  - 100036
+  - 0
+  - 100037
+- - say
+  - 100037.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150004
+- - "+SpecialRight"
+  - 150004
+  - -1
+  - 100038
+- - "+SpecialRight"
+  - 100038
+  - 0
+  - 100039
+- - say
+  - 100039.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150005
+- - "+SpecialRight"
+  - 150005
+  - -1
+  - 100040
+- - "+SpecialRight"
+  - 100040
+  - 0
+  - 100041
+- - say
+  - 100041.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150006
+- - "+SpecialRight"
+  - 150006
+  - -1
+  - 100042
+- - "+SpecialRight"
+  - 100042
+  - 0
+  - 100043
+- - say
+  - 100043.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150007
+- - "+SpecialRight"
+  - 150007
+  - -1
+  - 100044
+- - "+SpecialRight"
+  - 100044
+  - 0
+  - 100045
+- - say
+  - 100045.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150008
+- - "+SpecialRight"
+  - 150008
+  - -1
+  - 100046
+- - "+SpecialRight"
+  - 100046
+  - 0
+  - 100047
+- - say
+  - 100047.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150009
+- - "+SpecialRight"
+  - 150009
+  - -1
+  - 100048
+- - "+SpecialRight"
+  - 100048
+  - 0
+  - 100049
+- - say
+  - 100049.0
+  - 
+  - 
+- - verify
+  - 10
+  - 1
+  - 150001
+- - "+SpecialRight"
+  - 150001
+  - -1
+  - 100050
+- - "+SpecialRight"
+  - 100050
+  - 0
+  - 100051
+- - say
+  - 100051.0
+  - 
+  - 
+- - "="
+  - 
+  - 150000
+  - 50000
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50000
+  - 150002
+  - 140007
+- - gotoF
+  - 140007
+  - 
+  - 188
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50001
+  - 150002
+  - 140008
+- - gotoF
+  - 140008
+  - 
+  - 186
 - - say
   - 170002
   - 
   - 
-- - param
+- - verify
+  - 3
+  - 1
   - 50000
-  - - 1
-    - 1
+- - "*SpecialRight"
   - 50000
-- - gosub
-  - 15
+  - 3
+  - 100052
+- - verify
+  - 3
+  - 1
+  - 50001
+- - "+"
+  - 50001
+  - 100052
+  - 100053
+- - "+SpecialRight"
+  - 100053
+  - -4
+  - 100054
+- - "+SpecialRight"
+  - 100054
+  - 10
+  - 100055
+- - hear
+  - number
   - 
-  - 50003
-- - say
-  - 50003
+  - 100055.0
+- - "+="
+  - 
+  - 150000
+  - 50001
+- - goto
   - 
   - 
+  - 174
+- - "+="
+  - 
+  - 150000
+  - 50000
+- - goto
+  - 
+  - 
+  - 171
+- - "="
+  - 
+  - 150000
+  - 50000
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50000
+  - 150002
+  - 140009
+- - gotoF
+  - 140009
+  - 
+  - 207
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50001
+  - 150002
+  - 140010
+- - gotoF
+  - 140010
+  - 
+  - 205
 - - say
   - 170003
   - 
   - 
+- - verify
+  - 3
+  - 1
+  - 50000
+- - "*SpecialRight"
+  - 50000
+  - 3
+  - 100056
+- - verify
+  - 3
+  - 1
+  - 50001
+- - "+"
+  - 50001
+  - 100056
+  - 100057
+- - "+SpecialRight"
+  - 100057
+  - -4
+  - 100058
+- - "+SpecialRight"
+  - 100058
+  - 19
+  - 100059
+- - hear
+  - number
+  - 
+  - 100059.0
+- - "+="
+  - 
+  - 150000
+  - 50001
+- - goto
+  - 
+  - 
+  - 193
+- - "+="
+  - 
+  - 150000
+  - 50000
+- - goto
+  - 
+  - 
+  - 190
+- - "="
+  - 
+  - 150000
+  - 50000
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50000
+  - 150002
+  - 140011
+- - gotoF
+  - 140011
+  - 
+  - 225
+- - "<="
+  - 50001
+  - 150002
+  - 140012
+- - gotoF
+  - 140012
+  - 
+  - 222
+- - verify
+  - 3
+  - 1
+  - 50000
+- - "*SpecialRight"
+  - 50000
+  - 3
+  - 100060
+- - verify
+  - 3
+  - 1
+  - 50001
+- - "+"
+  - 50001
+  - 100060
+  - 100061
+- - "+SpecialRight"
+  - 100061
+  - -4
+  - 100062
+- - "+SpecialRight"
+  - 100062
+  - 28
+  - 100063
+- - "="
+  - 
+  - 150010
+  - 100063.0
+- - "+="
+  - 
+  - 150000
+  - 50001
+- - goto
+  - 
+  - 
+  - 211
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "+="
+  - 
+  - 150000
+  - 50000
+- - goto
+  - 
+  - 
+  - 209
+- - SEND_ATTR
+  - 0
+  - 
+  - 0
+- - SEND_ATTR
+  - 1
+  - 
+  - 1
+- - SEND_ATTR
+  - 2
+  - 
+  - 2
+- - SEND_ATTR
+  - 3
+  - 
+  - 3
+- - SEND_ATTR
+  - 4
+  - 
+  - 4
+- - SEND_ATTR
+  - 5
+  - 
+  - 5
+- - SEND_ATTR
+  - 6
+  - 
+  - 6
+- - SEND_ATTR
+  - 7
+  - 
+  - 7
+- - SEND_ATTR
+  - 8
+  - 
+  - 8
+- - SEND_ATTR
+  - 9
+  - 
+  - 9
+- - SEND_ATTR
+  - 10
+  - 
+  - 10
+- - SEND_ATTR
+  - 11
+  - 
+  - 11
+- - SEND_ATTR
+  - 12
+  - 
+  - 12
+- - SEND_ATTR
+  - 13
+  - 
+  - 13
+- - SEND_ATTR
+  - 14
+  - 
+  - 14
+- - SEND_ATTR
+  - 15
+  - 
+  - 15
+- - SEND_ATTR
+  - 16
+  - 
+  - 16
+- - SEND_ATTR
+  - 17
+  - 
+  - 17
+- - SEND_ATTR
+  - 18
+  - 
+  - 18
+- - SEND_ATTR
+  - 19
+  - 
+  - 19
+- - SEND_ATTR
+  - 20
+  - 
+  - 20
+- - SEND_ATTR
+  - 21
+  - 
+  - 21
+- - SEND_ATTR
+  - 22
+  - 
+  - 22
+- - SEND_ATTR
+  - 23
+  - 
+  - 23
+- - SEND_ATTR
+  - 24
+  - 
+  - 24
+- - SEND_ATTR
+  - 25
+  - 
+  - 25
+- - SEND_ATTR
+  - 26
+  - 
+  - 26
+- - SEND_ATTR
+  - 27
+  - 
+  - 27
+- - SEND_ATTR
+  - 28
+  - 
+  - 28
+- - SEND_ATTR
+  - 29
+  - 
+  - 29
+- - SEND_ATTR
+  - 30
+  - 
+  - 30
+- - SEND_ATTR
+  - 31
+  - 
+  - 31
+- - SEND_ATTR
+  - 32
+  - 
+  - 32
+- - SEND_ATTR
+  - 33
+  - 
+  - 33
+- - SEND_ATTR
+  - 34
+  - 
+  - 34
+- - SEND_ATTR
+  - 35
+  - 
+  - 35
+- - SEND_ATTR
+  - 36
+  - 
+  - 36
+- - gosub
+  - 41
+  - 
+  - 
+- - "="
+  - 
+  - 150000
+  - 50000
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "<="
+  - 50000
+  - 150002
+  - 140013
+- - gotoF
+  - 140013
+  - 
+  - 281
+- - "<="
+  - 50001
+  - 150002
+  - 140014
+- - gotoF
+  - 140014
+  - 
+  - 278
+- - verify
+  - 3
+  - 1
+  - 50000
+- - "*SpecialRight"
+  - 50000
+  - 3
+  - 100064
+- - verify
+  - 3
+  - 1
+  - 50001
+- - "+"
+  - 50001
+  - 100064
+  - 100065
+- - "+SpecialRight"
+  - 100065
+  - -4
+  - 100066
+- - "+SpecialRight"
+  - 100066
+  - 28
+  - 100067
+- - say
+  - 100067.0
+  - 
+  - 
+- - "+="
+  - 
+  - 150000
+  - 50001
+- - goto
+  - 
+  - 
+  - 267
+- - "="
+  - 
+  - 150000
+  - 50001
+- - "+="
+  - 
+  - 150000
+  - 50000
+- - goto
+  - 
+  - 
+  - 265
 - - terminate
   - 
   - 
